メール認証更新

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -4,14 +4,16 @@ COPY php.ini /usr/local/etc/php/
 
 RUN apt update \
     && apt install -y default-mysql-client zlib1g-dev libzip-dev unzip \
-    && docker-php-ext-install pdo_mysql zip
+    libpng-dev libjpeg-dev libwebp-dev libfreetype6-dev \
+    && docker-php-ext-configure gd --with-freetype --with-jpeg --with-webp \
+    && docker-php-ext-install pdo_mysql zip gd
+
 
 RUN curl -sS https://getcomposer.org/installer | php \
     && mv composer.phar /usr/local/bin/composer \
     && composer self-update
 
-RUN addgroup -g 1000 www-data && \
-    adduser -u 1000 -G www-data -s /bin/sh -D www-data
+RUN id -u www-data || useradd -u 1000 -g www-data -s /bin/sh -m www-data
 
 WORKDIR /var/www
 
